--- a/static/templates/dashboard2.html
+++ b/static/templates/dashboard2.html
@@ -8,9 +8,11 @@
                 <div class="maincontentinner">
                     <div style="min-height: 300px;">
                         <div class="span6">
-                            <h4 class="widgettitle">People on Board Halul:<b style="padding-left: 10px; font-size:175%;"></b></h4>
-                            <h4 class="widgettitle">People on Board PS 2:<b style="padding-left: 15px; font-size:175%;"></b></h4>
-                            <h4 class="widgettitle">People on Board PS 3:<b style="padding-left: 15px; font-size:175%;"></b></h4>
+                            <!-- <form method = "POST" action="dashboardnumbers" class="stdform">{% csrf_token %} -->
+                                <h4 class="widgettitle">People on Board Halul:    {{halul}}<b style="padding-left: 10px; font-size:175%;"></b></h4>
+                                <h4 class="widgettitle">People on Board PS 2:     {{ps1}}<b style="padding-left: 15px; font-size:175%;"></b></h4>
+                                <h4 class="widgettitle">People on Board PS 3:     {{ps2}}<b style="padding-left: 15px; font-size:175%;"></b></h4>
+                            <!-- </form> -->
                         </div>
                     <div class="clearfix"></div>
                     <div style="padding-top:20px" class="span3">
