--- a/static/templates/register_device.html
+++ b/static/templates/register_device.html
@@ -2,7 +2,7 @@
 {% block content %} 
 <div class="pageheader">
     <div class="pageicon"><span class="iconfa-pencil"></span></div>
-        <div class="pagetitle"><h1>Register Admin</h1></div>
+        <div class="pagetitle"><h1>Register Devices</h1></div>
 </div>
     <div class="maincontent">
         <div class="maincontentinner">
