--- a/static/templates/chart.html
+++ b/static/templates/chart.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>
-      Chart
+      Meals Anlytical Charts
     </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
     <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
-    <script src="http://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
+    <!-- // <script src="http://code.highcharts.com/modules/exporting.js" type="text/javascript"></script> -->
     <script type="text/javascript">
  $(function () {
     $('#container').highcharts({
