--- a/static/templates/mealreports.html
+++ b/static/templates/mealreports.html
@@ -1,7 +1,39 @@
 {% extends "base.html" %}
 {% block head %}
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/datatables/dataTables.bootstrap.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="/static/css/dhtmlxcalendar.css"/>
 <script src="/static/js/dhtmlxcalendar.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
+<script src="/static/js/jspdf.js"></script>
+
+<script src="/static/js/libs/FileSaver.js/FileSaver.js"></script>
+
+<script src="/static/js/jspdf.plugin.table.js"></script>
+<script>
+             jQuery(document).ready(function() {
+        
+              jQuery("#testTable").dataTable({
+        "lengthMenu": [[3,5,7,10, 25, 50, -1], [3,5,7,10, 25, 50, "All"]]
+    });
+ });
+</script>
+<script>
+            var data = [], fontSize = 12, height = 0, doc;
+            doc = new jsPDF('p', 'pt', 'a4', true);
+            doc.setFont("times", "normal");
+            doc.setFontSize(fontSize);
+            function generate() {
+                data = doc.tableToJson('testTable');
+                height = doc.drawTable(data, {
+                    xstart : 10,
+                    ystart : 10,
+                    tablestart : 70,
+                    marginleft : 10
+                });
+                doc.save("Mealsreport.pdf");
+            };
+</script>
 
 <script>
         var myCalendar;
@@ -10,87 +42,112 @@
             myCalendar = new dhtmlXCalendarObject(["calendar","calendar2"]);
         }
 </script>
-<script src="/static/js/calendar/clndr.js"></script>
-<script src="/static/js/calendar/moment-2.2.1.js"></script>
+<script type="text/javascript">
+var tableToExcel = (function() {
+  var uri = 'data:application/vnd.ms-excel;base64,'
+    , template = '<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:x="urn:schemas-microsoft-com:office:excel" xmlns="http://www.w3.org/TR/REC-html40"><head><!--[if gte mso 9]><xml><x:ExcelWorkbook><x:ExcelWorksheets><x:ExcelWorksheet><x:Name>{worksheet}</x:Name><x:WorksheetOptions><x:DisplayGridlines/></x:WorksheetOptions></x:ExcelWorksheet></x:ExcelWorksheets></x:ExcelWorkbook></xml><![endif]--></head><body><table>{table}</table></body></html>'
+    , base64 = function(s) { return window.btoa(unescape(encodeURIComponent(s))) }
+    , format = function(s, c) { return s.replace(/{(\w+)}/g, function(m, p) { return c[p]; }) }
+  return function(table, name) {
+    if (!table.nodeType) table = document.getElementById(table)
+    var ctx = {worksheet: name || 'Worksheet', table: table.innerHTML}
+    window.location.href = uri + base64(format(template, ctx))
+  }
+})()
+</script>
 {% endblock %}
 {% block content %} 
 <div class="pageheader">
                 <div class="pageicon"><span class="iconfa-pencil"></span></div>
                     <div class="pagetitle"><h1>Meal Reports</h1></div>
                     </div>
-                    <!-- <div class="errortitle">
-        <h4 class="animate0 fadeInUp">The page you are looking for has not been found.</h4>
-        <span class="animate1 bounceIn">4</span>
-        <span class="animate2 bounceIn">0</span>
-        <span class="animate3 bounceIn">4</span>
-        <div class="errorbtns animate4 fadeInUp">
-            <a onclick="history.back()" class="btn btn-primary btn-large">Go to Previous Page</a>
-            <a href="dashboard.html" class="btn btn-large">Go to Dashboard</a>
-        </div>
-    </div> -->
     <div class="container-fluid">
-    <div class="span12">
+      <div class="row">
+    <div class="col-md-12">
     <form action="mealreports" method="post">
     {% csrf_token %}
-    <div class="form-control span6" style="float:left;">
+    <div class="col-xs-6 text-center" >
         <!-- From : <input type="date" name="from" /> -->
-        From : <input type="text" name='fromdate' id="calendar" />
+        From : <input type="text" name='fromdate' id="calendar" placeholder="From date.."/>
      </div>
-     <div class="form-control">   
+     <div class="col-xs-6">   
         <!-- To : <input type="date" name="to" /> -->
-        To : <input type="text" name='todate' id="calendar2" />
+        To : <input type="text" name='todate' id="calendar2" placeholder="To date.."/> 
      </div>
-     <div class="text-center"> 
-     <button type="submit" class="btn btn-primary" align="right">Submit</button>
+     <div class="text-center" align="left" style="margin-left: -69px;"> 
+        <button type="submit" class="btn btn-primary">Submit</button>
      <!-- <input type="button" id='submit' value="submit" /> -->
      </div>
-   <!-- <form method="POST" action="">
-     <table class="table-hover table-stripped">
-         <tr align='justify'>
-         <td><h5>From :</h5></td>
-         <td><input type="date" id="from" name="from"></td>
-         <td></td>
-         <td><h5>To :</h5></td>
-         <td><input type="date" id="to" name="to"></td>
-         <td><button type="button" class="btn btn-primary" align="right">Submit</button></td>
-        </tr>
-     </table> -->
-      </div>  
-<table class="table table-hover table-striped table-bordered table-condensed">
-<tr>
-        <td>Employee_ID</td>
-        <td>Employee_Name</td>
-        <td>Company</td>
-        <td>Breakfast</td>
-        <td>Lunch</td>
-        <td>Dinner</td>
-</tr>
+<!-- 
+         <div class="text-center">
+          <p><font color='green'>{{ total_bf }}   <t> {{ total_l }}   <t> {{ total_d }}</font></p>
+        </div>
+ -->
+       
+      </div>
+      <div class="cleafix"></div>
+            <div class="col-md-12">
+      <div class="table-responsive" >
+            
+              <table class="table table-bordered table-striped" id='testTable'>
+                <thead>
+                  <tr>
+
+                      <td>Employee_ID</td>
+                      <td>Employee_Name</td>
+                      <td>Company</td>
+                      <td>Breakfast</td>
+                      <td>Lunch </td>
+                      <td>Dinner</td>
+                  </tr>
+                </thead>
+                <tbody>
 {% for obj in lists %}
-        <!-- {% for obj in lists %} -->
         <tr>
             <td>
-                {{ obj }}
+                {{ obj.emp_id }}
             </td>
             <td>
-                {{ obj }}
+                {{ obj.emp_name }}
             </td>
             <td>
-                {{ obj }}
+                {{ obj.com }}
             </td>
             <td>
-                {{ obj }}
+                {{ obj.bf_count }}
             </td>
             <td>
-                {{ obj }}
+                {{ obj.l_count }}
             </td>
             <td>
-                {{ obj }}
+                {{ obj.d_count }}
             </td>
            </tr>
-           <!-- {% endfor %} -->
        {% endfor %}
+       <tbody>
 </table>
+</div>
+</div>
+</div>
+ <div class="text-left">
+             <button type="button" class="btn btn-primary" onclick="tableToExcel('testTable')">Export to Excel</button>
+             <input type="button" onclick="generate()" value="Export to Pdf" class="btn btn-primary">
+         </div>
 </form>
+
+
+
+ <script>
+// function doit()
+// {
+//     if (!window.print)
+//     {
+//         alert("You need NS4.x to use this print button!")
+//         return
+//     }
+//         window.print()
+// }
+</script>
 </div>
 
 {% endblock %} 
