--- a/static/templates/registration_admin.html
+++ b/static/templates/registration_admin.html
@@ -1,4 +1,4 @@
-{% extends "base2.html" %}
+{% extends "base.html" %}
 {% block content %} 
 <div class="pageheader">
     <div class="pageicon"><span class="iconfa-pencil"></span></div>
