--- a/static/templates/viewdev.html
+++ b/static/templates/viewdev.html
@@ -1,4 +1,4 @@
-{% extends "base2.html" %}
+{% extends "base.html" %}
 {% block content %} 
 					<table class="table table-bordered table-hover table-striped tablesorter" id="guest_list">
                           <thead>
