--- a/static/templates/viewemp.html
+++ b/static/templates/viewemp.html
@@ -1,9 +1,25 @@
-{% extends "base2.html" %}
+{% extends "base.html" %}
 {% block content %} 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
+</script>
+  <script>
+  function edit(id)
+  {
+    var url ='/regemp?eid='+id;
+    window.location.href = url
+  }
+  </script>
+
+  <script>
+  function delete(id)
+  {
+    alert("delete");
+  }
+  </script>
 					<table class="table table-bordered table-hover table-striped tablesorter" id="guest_list">
                           <thead>
                             <tr>
-                              <th>First Name<i class="fa fa-sort"></i></th>
+                              <th>First Name <i class="fa fa-sort"></i></th>
                               <th>Last Name <i class="fa fa-sort"></i></th>
                               <th>Employee Id<i class="fa fa-sort"></i></th>
                               <th>Rfidcardno <i class="fa fa-sort"></i></th>
@@ -29,10 +45,13 @@
                               <td align="center">{{ user.employee_type}}</td>
                               <td align="center">{{ user.company}}</td>
                               <td align="center">{{ user.department}}</td>               
-                              <!-- <td><button type="button"  class="btn btn-primary center" onclick="Edit({{user.id}})">Edit</button><br/> -->
-                              </td>                   
+                              <td><button type="button"  class="btn btn-primary center" onclick="edit({{user.id}})">Edit</button><br/>
+                              </td>             
+                              <!-- <td><button type="button"  class="btn btn-primary center" onclick="delete({{user.id}})">Delete</button><br/>    -->   
                               </tr>
                               {%endfor%}                     
                           </tbody>
                         </table>
+
+                       
 {% endblock %}
